--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,3 +227,12 @@ section {
     font-size: 17px;
     line-height: 1.3;
 }
+
+.contact { 
+    text-align: center;
+    background: #024e76;
+}
+
+.contact h2 {
+    color: #fce138;
+}
