--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -227,7 +227,7 @@ section {
     font-size: 17px;
     line-height: 1.3;
 }
-
+/* Style the contact Section */
 .contact { 
     text-align: center;
     background: #024e76;
@@ -235,4 +235,18 @@ section {
 
 .contact h2 {
     color: #fce138;
+}
+
+.contact-info iframe {
+    width: 400px;
+    height: 400px;
+}
+
+.contact-info div {
+    width: 410px;
+    display: inline-block;
+    vertical-align: top;
+    text-align: left;
+    margin: 30px 0 0 60px;
+    color: white;
 }
