--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,9 +143,6 @@ section {
     font-size: 16px;
 }
 /* Style What We Do Section */
-.intro {
-    text-align: center;
-}
 
 .intro p {
     line-height: 1.7;
@@ -153,20 +150,21 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 /* style the What You Do Section */
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -201,9 +199,6 @@ section {
     font-size: 38px;
 }
 /* Style the Trainers Section */
-.trainers {
-    text-align: center;
-}
 
 .trainer {
     width: 900px;
@@ -224,14 +219,6 @@ section {
     width: 65%;
 }
 
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
 .trainer-bio h3 {
     font-size: 32px;
     margin-bottom: 8px;
@@ -249,7 +236,6 @@ section {
 }
 /* Style the contact Section */
 .contact { 
-    text-align: center;
     background: #024e76;
 }
 
@@ -285,4 +271,17 @@ section {
 
 .contact-info a {
     color: #fce138;
+}
+
+/* Utility Classes */
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.flex-row {
+    display: flex;
 }
