--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -264,6 +264,19 @@ section {
     justify-content: space-around;
 }
 
+/* Create a Grid */
+.service-grid-container {
+    display: grid;
+}
+
+.service-grid-item {
+    width: 200px;
+    height: 50px;
+    background-color: orange;
+    border: solid;
+    color: black;
+}
+
 /* Style the contact Section */
 .contact { 
     background: #024e76;
